# langfuse-dataset-evaluator

./: .env.example  README.md  pyproject.toml
src/dify_langfuse_validator/: __init__.py  cli.py  config.py  dify_client.py  evaluator.py  langfuse_runner.py
tests/: test_evaluator.py  test_langfuse_runner.py
