[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dify-langfuse-validator"
version = "0.1.0"
description = "Validate Dify chat app outputs against Langfuse datasets."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "langfuse>=4.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[project.scripts]
dify-langfuse-validate = "dify_langfuse_validator.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
